feat(server): 交付可靠事件、调度整合与服务验收实现